--- a/ad_test1/Project Outputs for ad_test_pcb1/Design Rule Check - ad_test_PCB1.html
+++ b/ad_test1/Project Outputs for ad_test_pcb1/Design Rule Check - ad_test_PCB1.html
@@ -219,17 +219,17 @@
 <tr class="front_matter">
 <td class="front_matter_column1">Date:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">2017/12/22</td>
+<td class="front_matter_column3">2017/12/25</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">14:28:14</td>
+<td class="front_matter_column3">16:55:42</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Elapsed Time:</td>
 <td class="front_matter_column2"></td>
-<td class="front_matter_column3">00:00:01</td>
+<td class="front_matter_column3">00:00:00</td>
 </tr>
 <tr class="front_matter">
 <td class="front_matter_column1">Filename:</td>
@@ -250,7 +250,7 @@
 <td class="DRC_summary_header_col3">0</td></tr>
 </table>
 </td>
-</table><a name="ID021VMMEGICOXLUZZY4EM5CKYVIYHEQPNNN0ASSMOEWIZXWLQ2Z1G"><h2>Summary</h2></a><table>
+</table><a name="ID2WEIPY1JTDPPOUMPVSAFIGCF0IYKDOZVJ0FJYOLPQNETUFSRX4J"><h2>Summary</h2></a><table>
 <tr>
 <th class="column1">Warnings</th>
 <th class="column2">Count</th>
@@ -265,59 +265,59 @@
 <th class="column2">Count</th>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID14OO5MMJ5SH0F4FO4LDJSMC4PCJVK0S0UDTHNRG1QMZCK0ZSD4LN">Clearance Constraint (Gap=0.254mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDY304PUHL0IUFDNI2IF2503DYYGB2EMZ12P1NZXFTNMBD1VPUPNEL">Clearance Constraint (Gap=10mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDJ3RWZSOEPXJ5N1RHSSLBBEO5ZM3IMPP2MVHHZCKDJCBNKOB0CQYI">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
+<td class="column1"><a href="#IDSYJSDS2WAC3SCS1CD5A2MTGIEJWHDIC4AWJDLINAKGPET2JABCFO">Short-Circuit Constraint (Allowed=No) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDYF0UEJGML50JJFKTLCUNLBBVZCNMCXZ4P404VBCEZOQKKV0E41CB">Un-Routed Net Constraint ( (All) )</a></td>
+<td class="column1"><a href="#IDCVI3MRANN5YJBPZE0W2VCAYSZLO3YK1NMSHDR1NPME4FNDO301CC">Un-Routed Net Constraint ( (All) )</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDEFDME0J1131VBD5VFTY3SNFOLMJ3GKH3N0XCVQH40GCK10WVKHQN">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
+<td class="column1"><a href="#IDDS1X0VRWJLG4LF5JQCQUEX3WHKKBMT3UET34VGBZPAYKF02ZA1RF">Modified Polygon (Allow modified: No), (Allow shelved: No)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID4DAB1JOX3W54N2T21QR42UWYYDNAFUXRVOVBCLQBFWL50WHQ3V">Width Constraint (Min=0.254mm) (Max=1.27mm) (Preferred=0.254mm) (All)</a></td>
+<td class="column1"><a href="#IDVDFJIQYGFJZCEUSXYUWLUF3DZJVP04P50DKCMHKK2I4H3TZSCN2">Width Constraint (Min=10mil) (Max=50mil) (Preferred=10mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDNPR0K1B2KJF3PBC4CRL2W04RCCEK2HETBBBXNQKZQ2WLYX4UZVOK">Power Plane Connect Rule(Relief Connect )(Expansion=0.508mm) (Conductor Width=0.254mm) (Air Gap=0.254mm) (Entries=4) (All)</a></td>
+<td class="column1"><a href="#ID0MAP54FJXXLXM0Q4F2ZQFI4SHIOCMDNIQUIS41P24PXKRKP3UVRC">Power Plane Connect Rule(Relief Connect )(Expansion=20mil) (Conductor Width=10mil) (Air Gap=10mil) (Entries=4) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDQ4IGCPDJNP3EBKIE1GW0JZUJNMEK0YZP5P5F301YOL03BONHCGF">Hole Size Constraint (Min=0.025mm) (Max=5.08mm) (All)</a></td>
+<td class="column1"><a href="#IDWHMFGBHNDDUIMRHWWBV50OZHOOISBHUFYUYEYLZ3JADQYLH1LL">Hole Size Constraint (Min=1mil) (Max=200mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDUJXWHD0WCCKCDJCUIQF5XS2J3KBP3HFJ1DSHJPJOKFYEA2B3IRSC">Hole To Hole Clearance (Gap=0.127mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDUJG3SVDLSX3IP41QU2AQ2RV5FEZKHRAV5WIJYVHI2QLYIKLN2R1F">Hole To Hole Clearance (Gap=5mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDB40XXCORV4HPB4SJC5V1ZAFXCB2RUD2B21TW13J1WGFVTUKUZ4JL">Minimum Solder Mask Sliver (Gap=0.025mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDPO5UJWFHHHODI5UR0SVW2CQUJHHST0KT1JLB3KLAH5W5WSYKDHZJ">Minimum Solder Mask Sliver (Gap=1mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDYCEIVOVDD4YUNJH55EVBR3NKSLLAXTXDT4F4QIHZLNFEAPK33XP">Silk To Solder Mask (Clearance=0.127mm) (IsPad),(All)</a></td>
+<td class="column1"><a href="#ID5WGAHXJAYC55EHC20KK2KNLZEOY5X2RGT5MSMTFPCB0A3SD2DZ0M">Silk To Solder Mask (Clearance=5mil) (IsPad),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#ID3GLWIKG53TXUOGWWALQLEHUSKKA0ISLQU4BM3AK0R2BAXMV1OVK">Silk to Silk (Clearance=0.127mm) (All),(All)</a></td>
+<td class="column1"><a href="#IDRDQMOFCVDKLAI0IDTEW5G1422PHV5GDWXWDVEDTFIFPINAVKMXK">Silk to Silk (Clearance=5mil) (All),(All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDTD1UA1K5KKEXPQAYRETXVRHZ2OTJEXMTS5RFW3B53QWFT5IG3IIH">Net Antennae (Tolerance=0mm) (All)</a></td>
+<td class="column1"><a href="#IDAAUBXJPROOR4BQRTSBZ5TYVDPMYCEKIV1JD1VKIPQYTVWR4GBXUL">Net Antennae (Tolerance=0mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_odd" onmouseover="className = 'onmouseover_odd'" onmouseout="className = 'onmouseout_odd'">
-<td class="column1"><a href="#IDTD4ZYM1MTDKSKRASERFH0VKDLDPMNEZQGUYIA0DCSE0ZG0FYHKTG">Matched Lengths(Tolerance=25.4mm) (InNetClass('DataBus[0..7]'))</a></td>
+<td class="column1"><a href="#IDZSLHMCHFDJI2HESPVGIX1Y45IIK0OYMDWSGK2UMDNUJERJ2RGIEH">Matched Lengths(Tolerance=1000mil) (InNetClass('DataBus[0..7]'))</a></td>
 <td class="column2">0</td>
 </tr>
 <tr class="onmouseout_even" onmouseover="className = 'onmouseover_even'" onmouseout="className = 'onmouseout_even'">
-<td class="column1"><a href="#IDFLKMYYW2FDTSLZA0SL22S1WXKMNPM15XNA0IAQJFK34LAJQQYDSC">Height Constraint (Min=0mm) (Max=25.4mm) (Prefered=12.7mm) (All)</a></td>
+<td class="column1"><a href="#ID5BLUIMWN5VJLDTYGBZUZORINCC4BGBTKDMBR5FIPIK0F0YAEMYYJ">Height Constraint (Min=0mil) (Max=1000mil) (Prefered=500mil) (All)</a></td>
 <td class="column2">0</td>
 </tr>
 <tr>
